Fixed canvas z-index bug on Firefox

--- a/index.css
+++ b/index.css
@@ -52,7 +52,8 @@ a {
     top: 0;
     left: 0;
     width: 100%;
-    height: 120% !important
+    height: 120% !important;
+    z-index: -1;
 }
 
 #menu {
